--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
  <title>Test side</title>
 </head>
 <body>
-  <h1>Test side</h1>
+ <h1>Test side</h1>
+ <h2>Please be patient!</h2>
 </body>
 </html>
