--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Kiddies Hacking-World</title>
 </head>
 <body>
-    <h1>Kiddies Hacking-World</h1>
+    <h1>Kiddie's Hacking-World</h1>
 </body>
 </html>
