--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
     <h1>Kiddie's Hacking-World</h1>
+    <a href="https://instagram.com/script_kiddie.py">My Instagram account</a>
+    <a href="https://github.com/hacking-kiddie">My GitHub account</a>
 </body>
 </html>
