--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Kiddies Hacking-World</title>
+    <title>Kiddie's Hacking-World</title>
 </head>
 <body>
     <h1>Kiddie's Hacking-World</h1>
