--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <h1>Kiddie's Hacking-World</h1>
-    <a href="https://instagram.com/script_kiddie.py/" target="_blank">My Instagram account</a><br>
-    <a href="https://github.com/hacking-kiddie/" target="_blank">My GitHub account</a>
+    <div>
+        <a href="https://instagram.com/script_kiddie.py/" target="_blank">My Instagram account</a><br>
+        <a href="https://github.com/hacking-kiddie/" target="_blank">My GitHub account</a>
+    </div>
 </body>
 </html>
