--- a/index.html
+++ b/index.html
@@ -11,8 +11,21 @@
 <body>
     <h1>Kiddie's Hacking-World</h1>
     <div>
-        <a href="https://instagram.com/script_kiddie.py/" target="_blank">My Instagram account</a><br>
-        <a href="https://github.com/hacking-kiddie/" target="_blank">My GitHub account</a>
+        <h2>About me:</h2>
+        <p>
+            Hello, my name is Fedor!<br>
+            I am a 16 year old boy from Germany.<br>
+            My hobby is programming in Python.<br>
+            On this website i try to expand my knowledge about web develoopment.<br>
+            I will also do this with Py-Script<br>
+        </p>
+    </div>
+    <br>
+    <div>
+        <h2>Conntact:</h2>
+        <a href="https://instagram.com/script_kiddie.py/" target="_blank">Visit my Instagram account</a><br>
+        <a href="https://github.com/hacking-kiddie/" target="_blank">Visit my GitHub account</a><br>
+        <a href="mailto:fedor.diwoky@proton.me" target="_blank">Write me an e-mail</a><br><br>
     </div>
 </body>
 </html>
