--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             I am a 16 year old boy from Germany.<br>
             My hobby is programming in Python.<br>
             On this website i try to expand my knowledge about web develoopment.<br>
-            I will also do this with Py-Script<br>
+            I will also do this with Py-Script.<br>
         </p>
     </div>
     <br>
@@ -27,5 +27,11 @@
         <a href="https://github.com/hacking-kiddie/" target="_blank">Visit my GitHub account</a><br>
         <a href="mailto:fedor.diwoky@proton.me" target="_blank">Write me an e-mail</a><br><br>
     </div>
+    <br>
+    <div>
+        <h2>Py-Script Playground</h2>
+        <a href="/pyscript.html"><button>Go to playground</button></a><br><br>
+    </div>
+    <br>
 </body>
 </html>
