--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             Hello, my name is Fedor!<br>
             I am a 16 year old boy from Germany.<br>
             My hobby is programming in Python.<br>
-            On this website i try to expand my knowledge about web develoopment.<br>
+            On this website I try to expand my knowledge about web develoopment.<br>
             I will also do this with Py-Script.<br>
         </p>
     </div>
