--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Kiddie's Hacking-World</h1>
     <div>
-        <h2>About me:</h2>
+        <h2>About me</h2>
         <p>
             Hello, my name is Fedor!<br>
             I am a 16 year old boy from Germany.<br>
@@ -22,7 +22,7 @@
     </div>
     <br>
     <div>
-        <h2>Conntact:</h2>
+        <h2>Conntact</h2>
         <a href="https://instagram.com/script_kiddie.py/" target="_blank">Visit my Instagram account</a><br>
         <a href="https://github.com/hacking-kiddie/" target="_blank">Visit my GitHub account</a><br>
         <a href="mailto:fedor.diwoky@proton.me" target="_blank">Write me an e-mail</a><br><br>
