--- a/pyscript.html
+++ b/pyscript.html
@@ -11,7 +11,7 @@
 
 </head>
 <body style="background-color: black;">
-    <a href="/index.html"><button style="color: rgb(0, 255, 0); background-color: rgb(0, 0, 0);">Back to startpage</button></a>
+    <a href="/index.html"><button style="color: rgb(0, 255, 0); background-color: rgb(0, 0, 0); font-family: Courier New;">Back to startpage</button></a>
     <br><br>
     <div style="border: lime 1px solid;"></div>
     <py-script src="/script.py"></py-script>
