--- a/pyscript.html
+++ b/pyscript.html
@@ -13,6 +13,6 @@
     <a href="/index.html"><button style="color: rgb(0, 255, 0); background-color: rgb(0, 0, 0); font-family: Courier New;">Back to startpage</button></a>
     <br><br>
     <div style="border: lime 1px solid;"></div>
-    <py-script src="/script.py"></py-script>
+    <py-repl auto-generate="true"></py-repl>
 </body>
 </html>
