--- a/pyscript.html
+++ b/pyscript.html
@@ -11,6 +11,7 @@
 </head>
 <body style="background-color: black;">
     <a href="/index.html"><button style="color: rgb(0, 255, 0); background-color: rgb(0, 0, 0); font-family: Courier New;">Back to startpage</button></a>
+    <p>Press SHIFT + ENTER to execute!</p>
     <br><br>
     <div style="border: lime 1px solid;"></div>
     <py-repl auto-generate="true"></py-repl>
