--- a/pyscript.html
+++ b/pyscript.html
@@ -14,6 +14,6 @@
     <p>Press SHIFT + ENTER to execute!</p>
     <br><br>
     <div style="border: lime 1px solid;"></div>
-    <py-repl auto-generate="true"></py-repl>
+    <py-repl auto-generate="true" style="background-color: grey;"></py-repl>
 </body>
 </html>
