--- a/pyscript.html
+++ b/pyscript.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css">
     <script defer src="https://pyscript.net/latest/pyscript.js"></script>
 </head>
-<body style="background-color: black;">
+<body style="background-color: black; color: lime;">
     <a href="/index.html"><button style="color: rgb(0, 255, 0); background-color: rgb(0, 0, 0); font-family: Courier New;">Back to startpage</button></a>
     <p>Press SHIFT + ENTER to execute!</p>
-    <div style="border: lime 1px solid;"></div>
-    <py-repl auto-generate="true" style="background-color: grey;"></py-repl>
+    <div style="border: lime 1px solid; background-color: grey;">
+        <py-repl auto-generate="true" style="background-color: grey;"></py-repl>
+    </div>
 </body>
 </html>
