--- a/pyscript.html
+++ b/pyscript.html
@@ -11,7 +11,10 @@
 </head>
 <body style="background-color: black;">
     <a href="/index.html"><button style="color: rgb(0, 255, 0); background-color: rgb(0, 0, 0); font-family: Courier New;">Back to startpage</button></a>
-    <p style="color: lime;">Press SHIFT + ENTER to execute!</p>
+    <p style="color: lime;">
+        Press SHIFT + ENTER to execute!<br>
+        Maybe this doesn't work on Android, sorry!
+    </p>
     <div style="border: lime 3px solid; background-color: grey;">
         <py-repl auto-generate="true" style="background-color: grey;"></py-repl>
     </div>
