--- a/pyscript.html
+++ b/pyscript.html
@@ -13,8 +13,9 @@
 <body style="background-color: black;">
     <a href="/index.html"><button style="color: rgb(0, 255, 0); background-color: rgb(0, 0, 0); font-family: Courier New;">Back to startpage</button></a>
     <p style="color: lime;">
-        Press SHIFT + ENTER to execute!<br>
-        Maybe this doesn't work on Android, sorry!
+        Press SHIFT + ENTER or click at the bottom right of the session to execute!<br>
+        Maybe this doesn't work on Android, sorry!<br>
+        Reload the page to clear the screen!
     </p>
     <div style="border: lime 3px solid; background-color: grey;">
         <py-repl auto-generate="true" style="background-color: grey;"></py-repl>
