--- a/pyscript.html
+++ b/pyscript.html
@@ -13,7 +13,7 @@
 <body style="background-color: black;">
     <a href="/index.html"><button style="color: rgb(0, 255, 0); background-color: rgb(0, 0, 0); font-family: Courier New;">Back to startpage</button></a>
     <p style="color: lime; font-family: Courier New;">
-        Press SHIFT + ENTER or click at the bottom right of the session to execute! (Maybe this doesn't work on some devices, sorry!)
+        Press SHIFT + ENTER or click at the bottom right of the session to execute, (maybe this doesn't work on some devices, sorry)!
         Reload the page to clear the screen!
     </p>
     <div style="border: lime 3px solid; background-color: grey;">
