--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
     </div>
     <br>
     <div>
-        <h2>Py-Script Playground</h2>
-        <a href="/pyscript.html"><button>Go to playground</button></a><br><br>
+        <h2>Coding Playgrounds</h2>
+        <a href="/pyscript.html"><button>Go to Python playground</button></a><br>
+        <a href="/javascript.html"><button>Go to JavaScript playground</button></a><br><br>
     </div>
     <br>
 </body>
