--- a/pyscript.html
+++ b/pyscript.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google" value="notranslate">
     <link rel="icon" type="image/png" href="/icon.png">
-    <title>Py-Script Playground</title>
+    <title>Python Playground</title>
     <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css">
     <script defer src="https://pyscript.net/latest/pyscript.js"></script>
 </head>
@@ -14,7 +14,7 @@
     <a href="/index.html"><button style="color: rgb(0, 255, 0); background-color: rgb(0, 0, 0); font-family: Courier New;">Back to startpage</button></a>
     <p style="color: lime; font-family: Courier New;">
         Press SHIFT + ENTER or click at the bottom right of the session to execute, (maybe this doesn't work on some devices, sorry)!
-        Reload the page to clear the screen!
+        Reload the page to clear the console!
     </p>
     <div style="border: lime 3px solid; background-color: grey;">
         <py-repl auto-generate="true" style="background-color: grey;"></py-repl>
