--- a/javascript.html
+++ b/javascript.html
@@ -7,7 +7,7 @@
     <meta name="google" value="notranslate">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="/icon.png">
-    <title>Kiddie's Hacking-World</title>
+    <title>JavaScript Playground</title>
 </head>
 <body>
     <h1>JavaScript Console</h1>
