--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
     <br>
     <div>
         <h2>Coding Playgrounds</h2>
-        <a href="/pyscript.html"><button>Go to Python playground</button></a><br>
-        <a href="/javascript.html"><button>Go to JavaScript playground</button></a><br><br>
+        <a href="/pyscript.html"><button>Go to Python playground</button></a><br><br>
     </div>
     <br>
 </body>
