--- a/html.html
+++ b/html.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>HTML Editor</title>
+  <style>
+    #editor {
+      width: 100%;
+      height: 300px;
+    }
+    #output {
+      border: 1px solid black;
+      padding: 10px;
+      margin-top: 10px;
+      white-space: pre-wrap;
+    }
+  </style>
+</head>
+<body>
+  <h1>HTML Editor</h1>
+  <textarea id="editor" placeholder="Schreibe deinen HTML-Code hier..."></textarea>
+  <button onclick="runCode()">Ausführen</button>
+  <div id="output"></div>
 
+  <script>
+    function runCode() {
+      var code = document.getElementById('editor').value;
+      var output = document.getElementById('output');
+      output.innerHTML = '';
+      output.innerHTML = code;
+      eval(code);
+    }
+  </script>
+</body>
+</html>
