--- a/pyscript.html
+++ b/pyscript.html
@@ -12,10 +12,12 @@
 </head>
 <body style="background-color: black;">
     <a href="/index.html"><button style="color: rgb(0, 255, 0); background-color: rgb(0, 0, 0); font-family: Courier New;">Back to startpage</button></a>
-    <p style="color: lime; font-family: Courier New;">
-        Press SHIFT + ENTER or click at the bottom right of the session to execute, (maybe this doesn't work on some devices, sorry)!
-        Reload the page to clear the console!
-    </p>
+    <div style="border: 5px solid; padding-left: 10px; padding-right: 10px;border-radius: 20px;">
+        <p style="color: lime; font-family: Courier New;">
+            Press SHIFT + ENTER or click at the bottom right of the session to execute, (maybe this doesn't work on some devices, sorry)!
+            Reload the page to clear the console!
+        </p>
+    </div>
     <div style="border: lime 3px solid; background-color: grey;">
         <py-repl auto-generate="true" style="background-color: grey;"></py-repl>
     </div>
