--- a/pyscript.html
+++ b/pyscript.html
@@ -9,11 +9,29 @@
     <title>Python Playground</title>
     <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css">
     <script defer src="https://pyscript.net/latest/pyscript.js"></script>
+    <style>
+        body {
+            background-color: black;
+        }
+        button {
+            color: rgb(0, 255, 0);
+            background-color: rgb(0, 0, 0);
+            font-family: Courier New;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        p {
+            color: lime;
+            font-family: Courier New;
+        }
+    </style>
 </head>
-<body style="background-color: black;">
-    <a href="/index.html"><button style="color: rgb(0, 255, 0); background-color: rgb(0, 0, 0); font-family: Courier New;">Back to startpage</button></a>
+<body>
+    <a href="/index.html"><button>Back to startpage</button></a>
     <div style="border: lime 5px solid; padding-left: 10px; padding-right: 10px; border-radius: 20px;">
-        <p style="color: lime; font-family: Courier New;">
+        <p>
             Press SHIFT + ENTER or click at the bottom right of the session to execute, (maybe this doesn't work on some devices, sorry)!
             Reload the page to clear the console!
         </p>
