--- a/pyscript.html
+++ b/pyscript.html
@@ -17,10 +17,8 @@
             color: rgb(0, 255, 0);
             background-color: rgb(0, 0, 0);
             font-family: Courier New;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            margin-left: 20px;
+            
         }
         p {
             color: lime;
