--- a/pyscript.html
+++ b/pyscript.html
@@ -17,8 +17,7 @@
             color: rgb(0, 255, 0);
             background-color: rgb(0, 0, 0);
             font-family: Courier New;
-            margin-left: 20px;
-            
+            margin-left: 20px;  
         }
         p {
             color: lime;
@@ -27,7 +26,7 @@
     </style>
 </head>
 <body>
-    <a href="/index.html"><button>Back to startpage</button></a>
+    <div style="text-align: center;"><a href="/index.html"><button>Back to startpage</button></a></div>
     <div style="border: lime 5px solid; padding-left: 10px; padding-right: 10px; border-radius: 20px;">
         <p>
             Press SHIFT + ENTER or click at the bottom right of the session to execute, (maybe this doesn't work on some devices, sorry)!
