--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <div>
         <h2>About me</h2>
         <p>
-            Hello, my name is Fedor!<br>
-            I am a 16 year old boy from Germany.<br>
-            My hobby is programming in Python.<br>
-            On this website I try to expand my knowledge about web develoopment.<br>
-            I will also do this with Py-Script.<br>
+            Hello, my name is Fedor!
+            I am a 16 year old boy from Germany.
+            My hobby is programming in Python.
+            On this website I try to expand my knowledge about web develoopment.
+            I will also do this with Py-Script.
         </p>
     </div>
     <br>
