--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div>
         <h2>About me</h2>
         <p>
-            Hello, my name is Fedor!
+            Hello, my name is Fedor!<br>
             I am a 16 year old boy from Germany.
             My hobby is programming in Python.
             On this website I try to expand my knowledge about web develoopment.
