--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     </div>
     <br>
     <div>
-        <h2>Coding Playgrounds</h2>
+        <h2>Coding Stuff</h2>
+        <a href="/learn.html"><button>Learn Python</button></a><br>
         <a href="/pyscript.html"><button>Go to Python playground</button></a><br><br>
     </div>
     <br>
