--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <div>
         <h2>Coding Stuff</h2>
         <a href="/learn.html"><button>Learn Python</button></a><br>
-        <a href="/pyscript.html"><button>Go to Python playground</button></a><br><br>
+        <a href="/pyscript.html"><button>Go to Python playground</button></a><br>
+        <br>
     </div>
     <br>
 </body>
