--- a/learn.html
+++ b/learn.html
@@ -10,5 +10,9 @@
     <title>Learn Python</title>
 </head>
 <body>
+    <a href="/index.html"><button>Back to startpage</button></a>
     <h1>Learn Python</h1>
+    <div>
+        <h2>Comming soon!</h2>
+    </div>
 </body>
